Fix text overflow on Collection page

--- a/src/Euro/CoinBundle/Resources/public/css/style.css
+++ b/src/Euro/CoinBundle/Resources/public/css/style.css
@@ -50,6 +50,10 @@ img {
 	vertical-align: middle;
 }
 
+.dropdown-menu li a {
+	white-space: normal;
+}
+
 .eurozone {
 	fill: #006DCC;
 }
